--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -5,6 +5,7 @@
 }
 
 
+
 ul {
 list-style: none;
 }
@@ -98,10 +99,6 @@ text-align: justify;
   height: 20vh;
 }
 
-.img{
-  height: 20vh;
-}
-
 
 
 .label{
@@ -112,21 +109,16 @@ text-align: justify;
 .control{
   margin-right: : 140px;
 }
-.produc img {
+
+.produc img{
   width: 150px;
 }
 
-.produc h3{
-  font-size: 1.5em;
-  margin-top: 3px;
-  margin-bottom: 3px;
+.produc img {
+  margin: 1em;
+  padding: 1em;
+  float:left;
 }
-
-.card{
-  border-radius: 4px;
-  background-color: white;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),  0 1px 2px rgba(0, 0, 0, 0.24);
-  }
 
 
 .main {
