--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -35,7 +35,7 @@ display: contents;
   align-items: stretch;
   background-color: black;
   width: 100%;
-  height: 100px;
+  height: 110px;
   position: fixed;
   top: 0;
   left: 0;
@@ -49,7 +49,8 @@ display: contents;
 
 .nav-item{
   display: block;
-  font-size: 1.25rem;
+  font-size: 1.15rem;
+  color: darkgrey;
   padding: 0.9rem 2rem;
   transition: all 1s;
 }
